--- a/TeamCode/src/main/res/xml/testhub_2026.xml
+++ b/TeamCode/src/main/res/xml/testhub_2026.xml
@@ -30,8 +30,12 @@ SOFTWARE.
         <LynxModule name="Control Hub" port="173">
             <goBILDA5202SeriesMotor name="Shooter.ShooterMotor1" port="0"/>
             <goBILDA5202SeriesMotor name="Intake.Motor" port="1"/>
-            <DigitalDevice name="Intake.backSensor" port="0" />
+<!--            <DigitalDevice name="Intake.backSensor" port="0" />-->
             <Servo name="Shooter.Launcher" port="5" />
+            <RevColorSensorV3 name="Spindexer.ExitSensor" port="0" bus="1" />
+            <RevColorSensorV3 name="Spindexer.EntrySensor" port="0" bus="2" />
+            <DigitalDevice name="Spindexer.LowerLimit" port="0" />
+            <goBILDA5202SeriesMotor name="Spindexer.Motor" port="2"/>
             <!--
             <RevBlinkinLedDriver name="blinkin" port="0" />
             <Servo name="gobildaLED" port="1" />
