Updated ftclib. Minor cleanup and added DashboardStatus line on FtcDashboard showing if we are tuning a subsystem. Cleaned up Robot Config file. Code reviewed Spindexer changes today.

--- a/TeamCode/src/main/res/xml/testhub_2026.xml
+++ b/TeamCode/src/main/res/xml/testhub_2026.xml
@@ -28,15 +28,18 @@ SOFTWARE.
     <Webcam name="Webcam 1" serialNumber="VendorProduct:vendor=0x045e|product=0x0779|connection="/>
     <LynxUsbDevice name="Control Hub Portal" serialNumber="(embedded)" parentModuleAddress="173">
         <LynxModule name="Control Hub" port="173">
+            <!-- Shooter -->
             <goBILDA5202SeriesMotor name="Shooter.ShooterMotor1" port="0"/>
-            <goBILDA5202SeriesMotor name="Intake.Motor" port="1"/>
-<!--            <DigitalDevice name="Intake.backSensor" port="0" />-->
             <Servo name="Shooter.Launcher" port="5" />
-            <RevColorSensorV3 name="Spindexer.ExitSensor" port="0" bus="1" />
-            <RevColorSensorV3 name="Spindexer.EntrySensor" port="0" bus="2" />
+            <!-- Intake -->
+            <goBILDA5202SeriesMotor name="Intake.Motor" port="1"/>
+            <!-- Spindexer -->
+            <RevRobotics40HDHexMotor name="Spindexer.Motor" port="2" />
+            <RevColorSensorV3 name="Spindexer.EntrySensor" port="0" bus="1" />
+            <RevColorSensorV3 name="Spindexer.ExitSensor" port="0" bus="2" />
             <DigitalDevice name="Spindexer.LowerLimit" port="0" />
-            <goBILDA5202SeriesMotor name="Spindexer.Motor" port="2"/>
             <!--
+            <DigitalDevice name="Intake.backSensor" port="0" />
             <RevBlinkinLedDriver name="blinkin" port="0" />
             <Servo name="gobildaLED" port="1" />
             <DigitalDevice name="Elbow.lowerLimit" port="1" />
