Added Spindexer and Status LEDs to Robot Config. Removed TaskAuto class, it's a template and serves no purpose in the competition repo. Reorganized gamepad control mapping to move all testing buttons to FtcTest from FtcTeleOp and cleaned up the code. Enabled Vision in TeleOp. Added REV Core Hex motor to RobotParams.MotorSpec. Cleaned up LEDIndicator code. Added code to shooter to communicate with Spindexer Miscellaneous cleanup. Updated trclib.

--- a/TeamCode/src/main/res/xml/testhub_2026.xml
+++ b/TeamCode/src/main/res/xml/testhub_2026.xml
@@ -38,6 +38,11 @@ SOFTWARE.
             <RevColorSensorV3 name="Spindexer.EntrySensor" port="0" bus="1" />
             <RevColorSensorV3 name="Spindexer.ExitSensor" port="0" bus="2" />
             <DigitalDevice name="Spindexer.LowerLimit" port="0" />
+            <!-- LED Indicators -->
+            <RevBlinkinLedDriver name="StatusLED" port="0" />
+            <Servo name="Spindexer1LED" port="1" />
+            <Servo name="Spindexer2LED" port="2" />
+            <Servo name="Spindexer3LED" port="3" />
             <!--
             <DigitalDevice name="Intake.backSensor" port="0" />
             <RevBlinkinLedDriver name="blinkin" port="0" />
