--- a/TeamCode/src/main/res/xml/decode_2026.xml
+++ b/TeamCode/src/main/res/xml/decode_2026.xml
@@ -31,45 +31,48 @@ SOFTWARE.
     -->
     <LynxUsbDevice name="Control Hub Portal" serialNumber="(embedded)" parentModuleAddress="173">
         <LynxModule name="Control Hub" port="173">
-            <!-- DriveBase -->
+            <!-- Motors -->
             <goBILDA5202SeriesMotor name="brDriveMotor" port="0"/>
-            <goBILDA5202SeriesMotor name="frDriveMotor" port="1"/>
-            <ContinuousRotationServo name="frSteerServo" port="5" />
-            <ContinuousRotationServo name="brSteerServo" port="3" />
+            <goBILDA5202SeriesMotor name="Shooter.ShooterMotor1" port="1"/>
+            <RevRobotics40HDHexMotor name="Shooter.PanMotor" port="2"/>
+            <goBILDA5202SeriesMotor name="frDriveMotor" port="3"/>
+            <!-- Servos -->
+            <ContinuousRotationServo name="Shooter.TiltMotor" port="0" />
+            <ContinuousRotationServo name="frSteerServo" port="2" />
+            <ContinuousRotationServo name="brSteerServo" port="4" />
+            <Servo name="Shooter.Launcher" port="5" />
+            <!-- Analog -->
             <AnalogInput name="frSteerEncoder" port="0" />
             <AnalogInput name="brSteerEncoder" port="1" />
-            <goBILDAPinpoint name="pinpointOdo" port="0" bus="1"/>
-            <!-- Shooter -->
-            <goBILDA5202SeriesMotor name="Shooter.ShooterMotor1" port="2"/>
-            <goBILDA5202SeriesMotor name="Shooter.PanMotor" port="3"/>
-            <ContinuousRotationServo name="Shooter.TiltMotor" port="0" />
             <AnalogInput name="Shooter.TiltEncoder" port="2" />
-            <Servo name="Shooter.Launcher" port="1" />
-            <!-- Spindexer -->
+            <!-- Digital -->
             <DigitalDevice name="Spindexer.LowerLimit" port="0" />
+            <!-- I2C -->
+            <goBILDAPinpoint name="pinpointOdo" port="0" bus="1"/>
             <RevColorSensorV3 name="Spindexer.EntrySensor" port="0" bus="2" />
             <!--
             <ControlHubImuBHI260AP name="imu" port="0" bus="0"/>
             -->
         </LynxModule>
         <LynxModule name="Expansion Hub 2" port="2">
-            <!-- DriveBase -->
+            <!-- Motors -->
             <goBILDA5202SeriesMotor name="blDriveMotor" port="0"/>
-            <goBILDA5202SeriesMotor name="flDriveMotor" port="1"/>
-            <ContinuousRotationServo name="flSteerServo" port="5" />
+            <RevRobotics40HDHexMotor name="Spindexer.Motor" port="1" />
+            <RevRobotics40HDHexMotor name="Intake.Motor" port="2"/>
+            <goBILDA5202SeriesMotor name="flDriveMotor" port="3"/>
+            <!-- Servos -->
+            <RevBlinkinLedDriver name="StatusLED" port="0" />
+            <ContinuousRotationServo name="flSteerServo" port="1" />
+            <Servo name="Spindexer1LED" port="2" />
             <ContinuousRotationServo name="blSteerServo" port="3" />
+            <Servo name="Spindexer2LED" port="4" />
+            <Servo name="Spindexer3LED" port="5" />
+            <!-- Analog -->
             <AnalogInput name="flSteerEncoder" port="0" />
             <AnalogInput name="blSteerEncoder" port="1" />
-            <!-- Intake -->
-            <RevRobotics40HDHexMotor name="Intake.Motor" port="2"/>
-            <!-- Spindexer -->
-            <RevRobotics40HDHexMotor name="Spindexer.Motor" port="3" />
-            <REV_VL53L0X_RANGE_SENSOR name="Spindexer.ExitSensor" port="0" bus="2" />
-            <!-- LED Indicators -->
-            <Servo name="Spindexer1LED" port="0" />
-            <Servo name="Spindexer2LED" port="1" />
-            <Servo name="Spindexer3LED" port="2" />
-            <RevBlinkinLedDriver name="StatusLED" port="4" />
+            <!-- Digital -->
+            <!-- I2C -->
+            <REV_VL53L0X_RANGE_SENSOR name="Spindexer.ExitSensor" port="0" bus="1" />
             <!--
             <LynxEmbeddedIMU name="imu 1" port="0" bus="0"/>
             -->
