--- a/TeamCode/src/main/res/xml/decode_2026.xml
+++ b/TeamCode/src/main/res/xml/decode_2026.xml
@@ -25,6 +25,7 @@ SOFTWARE.
     <Webcam name="Webcam 1" serialNumber="6BC978AF" />
     <EthernetDevice name="Limelight3a" serialNumber="EthernetOverUsb:eth0:172.29.0.21" port="0" ipAddress="172.29.0.1" />
     <LynxUsbDevice name="Control Hub Portal" serialNumber="(embedded)" parentModuleAddress="173">
+        <!-- Control Hub -->
         <LynxModule name="Control Hub" port="173">
             <!-- Motors -->
             <goBILDA5202SeriesMotor name="brDriveMotor" port="0"/>
@@ -36,7 +37,7 @@ SOFTWARE.
             <ContinuousRotationServo name="frSteerServo" port="2" />
             <ContinuousRotationServo name="brSteerServo" port="4" />
             <ContinuousRotationServo name="Shooter.TiltMotor" port="5" />
-            <!-- Analog -->1
+            <!-- Analog -->
             <AnalogInput name="frSteerEncoder" port="0" />
             <AnalogInput name="brSteerEncoder" port="1" />
             <AnalogInput name="Shooter.TiltEncoder" port="2" />
@@ -49,6 +50,7 @@ SOFTWARE.
             <ControlHubImuBHI260AP name="imu" port="0" bus="0"/>
             -->
         </LynxModule>
+        <!-- Expansion Hub -->
         <LynxModule name="Expansion Hub 2" port="2">
             <!-- Motors -->
             <goBILDA5202SeriesMotor name="blDriveMotor" port="0"/>
