--- a/TeamCode/src/main/res/xml/swerve_2026.xml
+++ b/TeamCode/src/main/res/xml/swerve_2026.xml
@@ -20,7 +20,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
-<Robot type="FirstInspires-FTC" name="Decode_2026">
+<Robot type="FirstInspires-FTC" name="Swerve_2026">
     <!-- Cameras -->
     <Webcam name="Webcam 1" serialNumber="6BC978AF" />
     <EthernetDevice name="Limelight3a" serialNumber="EthernetOverUsb:eth0:172.29.0.21" port="0" ipAddress="172.29.0.1" />
@@ -34,6 +34,8 @@ SOFTWARE.
             <goBILDA5202SeriesMotor name="frDriveMotor" port="3"/>
             <!-- Servos -->
             <Servo name="Shooter.Launcher" port="0" />
+            <ContinuousRotationServo name="frSteerServo" port="2" />
+            <ContinuousRotationServo name="brSteerServo" port="4" />
             <ContinuousRotationServo name="Shooter.TiltMotor" port="5" />
             <!-- Analog -->
             <AnalogInput name="frSteerEncoder" port="0" />
@@ -57,7 +59,9 @@ SOFTWARE.
             <goBILDA5202SeriesMotor name="flDriveMotor" port="3"/>
             <!-- Servos -->
             <RevBlinkinLedDriver name="StatusLED" port="0" />
+            <ContinuousRotationServo name="flSteerServo" port="1" />
             <Servo name="Spindexer1LED" port="2" />
+            <ContinuousRotationServo name="blSteerServo" port="3" />
             <Servo name="Spindexer2LED" port="4" />
             <Servo name="Spindexer3LED" port="5" />
             <!-- Analog -->
