--- a/TeamCode/src/main/res/xml/decode_2026.xml
+++ b/TeamCode/src/main/res/xml/decode_2026.xml
@@ -29,24 +29,20 @@ SOFTWARE.
         <LynxModule name="Control Hub" port="173">
             <!-- Motors -->
             <goBILDA5202SeriesMotor name="frDriveMotor" port="0"/>
-            <goBILDA5202SeriesMotor name="Spindexer.Motor" port="1" />
-            <!--
             <goBILDA5202SeriesMotor name="Shooter.ShootMotor1" port="1"/>
-            <RevRobotics40HDHexMotor name="Shooter.PanMotor" port="2"/>
-            -->
+            <goBILDA5202SeriesMotor name="Spindexer.Motor" port="2" />
             <goBILDA5202SeriesMotor name="brDriveMotor" port="3"/>
             <!-- Servos -->
-            <Servo name="Shooter.Launcher" port="0" />
-            <ContinuousRotationServo name="Shooter.TiltMotor" port="5" />
+            <ContinuousRotationServo name="Shooter.TiltMotor" port="0" />
+            <Servo name="Shooter.Launcher" port="2" />
             <!-- Analog -->
-            <AnalogInput name="frSteerEncoder" port="0" />
-            <AnalogInput name="brSteerEncoder" port="1" />
-            <AnalogInput name="Shooter.TiltEncoder" port="2" />
+            <AnalogInput name="Shooter.TiltEncoder" port="0" />
             <!-- Digital -->
             <DigitalDevice name="Spindexer.LowerLimit" port="0" />
             <!-- I2C -->
             <goBILDAPinpoint name="pinpointOdo" port="0" bus="1"/>
-            <RevColorSensorV3 name="Spindexer.EntrySensor" port="0" bus="2" />
+            <RevColorSensorV3 name="Spindexer.EntrySensor1" port="0" bus="2" />
+            <RevColorSensorV3 name="Spindexer.EntrySensor2" port="0" bus="2" />
             <!--
             <ControlHubImuBHI260AP name="imu" port="0" bus="0"/>
             -->
@@ -55,20 +51,18 @@ SOFTWARE.
         <LynxModule name="Expansion Hub 2" port="2">
             <!-- Motors -->
             <goBILDA5202SeriesMotor name="flDriveMotor" port="0"/>
-            <goBILDA5202SeriesMotor name="Intake.Motor" port="2"/>
+            <goBILDA5202SeriesMotor name="Intake.Motor" port="1"/>
+            <goBILDA5202SeriesMotor name="Shooter.PanMotor" port="2"/>
             <goBILDA5202SeriesMotor name="blDriveMotor" port="3"/>
             <!-- Servos -->
             <RevBlinkinLedDriver name="StatusLED" port="0" />
-            <Servo name="Spindexer1LED" port="2" />
-            <Servo name="Spindexer2LED" port="4" />
-            <Servo name="Spindexer3LED" port="5" />
+            <Servo name="Spindexer1LED" port="1" />
+            <Servo name="Spindexer2LED" port="2" />
+            <Servo name="Spindexer3LED" port="3" />
             <!-- Analog -->
-            <AnalogInput name="flSteerEncoder" port="0" />
-            <AnalogInput name="blSteerEncoder" port="1" />
             <!-- Digital -->
             <!-- I2C -->
             <!--
-            <REV_VL53L0X_RANGE_SENSOR name="Spindexer.ExitSensor" port="0" bus="1" />
             <LynxEmbeddedIMU name="imu 1" port="0" bus="0"/>
             -->
         </LynxModule>
