Updated Robot Config for robot v1 and v2. Rough tuned Spindexer. Rough tuned Pan motor. Rough tuned Tilt motor. Added Gobilda motor 223 spec.

--- a/TeamCode/src/main/res/xml/swerve_2026.xml
+++ b/TeamCode/src/main/res/xml/swerve_2026.xml
@@ -45,7 +45,7 @@ SOFTWARE.
             <DigitalDevice name="Spindexer.LowerLimit" port="0" />
             <!-- I2C -->
             <goBILDAPinpoint name="pinpointOdo" port="0" bus="1"/>
-            <RevColorSensorV3 name="Spindexer.EntrySensor" port="0" bus="2" />
+            <RevColorSensorV3 name="Spindexer.EntrySensor1" port="0" bus="2" />
             <!--
             <ControlHubImuBHI260AP name="imu" port="0" bus="0"/>
             -->
